--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <section class="middle-container">
 <div class="profile">
-    <img id="perfil" src="./img/2.JPEG" alt="angela-profile-img" width="200" >
+    <img id="perfil" src="./img/2.JPEG" alt="david hafeli" width="200" >
     <h2>Hello.</h2>
     <p class="intro">I am an Full Stack Web Developer. 
       </p>
